Fix flicker issue with affix

--- a/source/stylesheets/docs.css
+++ b/source/stylesheets/docs.css
@@ -75,25 +75,25 @@ section > ul li {
 
 
 /*ISOTOPE GALLERY*/
-.isotope-item { 
+.isotope-item {
   z-index:2;
 }
-.isotope-hidden.isotope-item { 
+.isotope-hidden.isotope-item {
   pointer-events:none;
   z-index:1;
 }
-.isotope, 
-.isotope .isotope-item { 
+.isotope,
+.isotope .isotope-item {
   -webkit-transition-duration:0.8s;
   -moz-transition-duration:0.8s;
   transition-duration:0.8s;
 }
-.isotope { 
+.isotope {
   -webkit-transition-property:height, width;
   -moz-transition-property:height, width;
   transition-property:height, width;
-}  
-.isotope .isotope-item img:hover { 
+}
+.isotope .isotope-item img:hover {
   -webkit-transition:all 0.3s ease;
   -webkit-transform:perspective(800px) rotateY(0deg);
 }
@@ -187,6 +187,12 @@ div.explain nav.primary ul{
 .bs-docs-sidenav .logo {
   padding-bottom:20px;
 }
+
+.bs-docs-sidenav.affix-bottom {
+  position: absolute;
+  bottom: 63px;
+}
+
 
 /* Responsive
 -------------------------------------------------- */
